--- a/platformio.ini
+++ b/platformio.ini
@@ -1,6 +1,14 @@
-[env:genericCH32V203C8T6]
+[platformio]
+
+[env]
 platform = https://github.com/Community-PIO-CH32V/platform-ch32v.git
-board = genericCH32V203C8T6
 framework = arduino
 lib_deps = robtillaart/CRC@^1.0.3
 build_flags= -D SYSCLK_FREQ_144MHz_HSI=144000000
+
+
+[env:genericCH32V203C8T6]
+board = genericCH32V203C8T6
+
+[env:CH32V203C8]
+board = genericCH32V203C8U6
