change ams version number

--- a/platformio.ini
+++ b/platformio.ini
@@ -5,10 +5,89 @@ platform = https://github.com/Community-PIO-CH32V/platform-ch32v.git
 framework = arduino
 lib_deps = robtillaart/CRC@^1.0.3
 build_flags= -D SYSCLK_FREQ_144MHz_HSI=144000000
-
+; upload_protocol = wchisp
+upload_speed = 1000000
+; upload_port = /dev/ttyUSB0
+; wchisp --serial --port /dev/tty.usbserial-B001BIQX flash ../BMCU_firmware_3_14.bin
+; upload_command = wchisp --serial --port $UPLOAD_PORT --baudrate $UPLOAD_SPEED flash $SOURCE\
+; upload_command = wchisp -s -p $UPLOAD_PORT -b Baud115200 flash $SOURCE
 
 [env:genericCH32V203C8T6]
 board = genericCH32V203C8T6
+build_flags = 
+    ${env.build_flags}
+    -DENABLE_BOOT_PROBE
 
 [env:CH32V203C8]
 board = genericCH32V203C8U6
+build_flags = 
+    ${env.build_flags}
+
+
+# ---- AMS A ----
+[env:fw-INT-A]
+extends = env:genericCH32V203C8T6
+build_flags =
+    ${env.build_flags}
+    -DENABLE_BOOT_PROBE
+    -DBAMBU_BUS_AMS_NUM=0
+    -DP1X_OUT_FILAMENT_METERS=200.0f
+
+[env:fw-EXT-A]
+extends = env:genericCH32V203C8T6
+build_flags =
+    ${env.build_flags}
+    -DENABLE_BOOT_PROBE
+    -DBAMBU_BUS_AMS_NUM=0
+    -DP1X_OUT_FILAMENT_METERS=700.0f
+
+# ---- AMS B ----
+[env:fw-INT-B]
+extends = env:genericCH32V203C8T6
+build_flags =
+    ${env.build_flags}
+    -DENABLE_BOOT_PROBE
+    -DBAMBU_BUS_AMS_NUM=1
+    -DP1X_OUT_FILAMENT_METERS=200.0f
+
+[env:fw-EXT-B]
+extends = env:genericCH32V203C8T6
+build_flags =
+    ${env.build_flags}
+    -DENABLE_BOOT_PROBE
+    -DBAMBU_BUS_AMS_NUM=1
+    -DP1X_OUT_FILAMENT_METERS=700.0f
+
+# ---- AMS C ----
+[env:fw-INT-C]
+extends = env:genericCH32V203C8T6
+build_flags =
+    ${env.build_flags}
+    -DENABLE_BOOT_PROBE
+    -DBAMBU_BUS_AMS_NUM=2
+    -DP1X_OUT_FILAMENT_METERS=200.0f
+
+[env:fw-EXT-C]
+extends = env:genericCH32V203C8T6
+build_flags =
+    ${env.build_flags}
+    -DENABLE_BOOT_PROBE
+    -DBAMBU_BUS_AMS_NUM=2
+    -DP1X_OUT_FILAMENT_METERS=700.0f
+
+# ---- AMS D ----
+[env:fw-INT-D]
+extends = env:genericCH32V203C8T6
+build_flags =
+    ${env.build_flags}
+    -DENABLE_BOOT_PROBE
+    -DBAMBU_BUS_AMS_NUM=3
+    -DP1X_OUT_FILAMENT_METERS=200.0f
+
+[env:fw-EXT-D]
+extends = env:genericCH32V203C8T6
+build_flags =
+    ${env.build_flags}
+    -DENABLE_BOOT_PROBE
+    -DBAMBU_BUS_AMS_NUM=3
+    -DP1X_OUT_FILAMENT_METERS=700.0f
