--- a/platformio.ini
+++ b/platformio.ini
@@ -41,6 +41,22 @@ build_flags =
     -DBAMBU_BUS_AMS_NUM=0
     -DP1X_OUT_FILAMENT_METERS=700.0f
 
+[env:fw-EXT-750-A]
+extends = env:genericCH32V203C8T6
+build_flags =
+    ${env.build_flags}
+    -DENABLE_BOOT_PROBE
+    -DBAMBU_BUS_AMS_NUM=0
+    -DP1X_OUT_FILAMENT_METERS=750.0f
+
+[env:fw-EXT-800-A]
+extends = env:genericCH32V203C8T6
+build_flags =
+    ${env.build_flags}
+    -DENABLE_BOOT_PROBE
+    -DBAMBU_BUS_AMS_NUM=0
+    -DP1X_OUT_FILAMENT_METERS=800.0f
+
 # ---- AMS B ----
 [env:fw-INT-B]
 extends = env:genericCH32V203C8T6
@@ -57,6 +73,22 @@ build_flags =
     -DENABLE_BOOT_PROBE
     -DBAMBU_BUS_AMS_NUM=1
     -DP1X_OUT_FILAMENT_METERS=700.0f
+
+[env:fw-EXT-750-B]
+extends = env:genericCH32V203C8T6
+build_flags =
+    ${env.build_flags}
+    -DENABLE_BOOT_PROBE
+    -DBAMBU_BUS_AMS_NUM=1
+    -DP1X_OUT_FILAMENT_METERS=750.0f
+
+[env:fw-EXT-800-B]
+extends = env:genericCH32V203C8T6
+build_flags =
+    ${env.build_flags}
+    -DENABLE_BOOT_PROBE
+    -DBAMBU_BUS_AMS_NUM=1
+    -DP1X_OUT_FILAMENT_METERS=800.0f
 
 # ---- AMS C ----
 [env:fw-INT-C]
@@ -75,6 +107,22 @@ build_flags =
     -DBAMBU_BUS_AMS_NUM=2
     -DP1X_OUT_FILAMENT_METERS=700.0f
 
+[env:fw-EXT-750-C]
+extends = env:genericCH32V203C8T6
+build_flags =
+    ${env.build_flags}
+    -DENABLE_BOOT_PROBE
+    -DBAMBU_BUS_AMS_NUM=2
+    -DP1X_OUT_FILAMENT_METERS=750.0f
+
+[env:fw-EXT-800-C]
+extends = env:genericCH32V203C8T6
+build_flags =
+    ${env.build_flags}
+    -DENABLE_BOOT_PROBE
+    -DBAMBU_BUS_AMS_NUM=2
+    -DP1X_OUT_FILAMENT_METERS=800.0f
+
 # ---- AMS D ----
 [env:fw-INT-D]
 extends = env:genericCH32V203C8T6
@@ -91,3 +139,19 @@ build_flags =
     -DENABLE_BOOT_PROBE
     -DBAMBU_BUS_AMS_NUM=3
     -DP1X_OUT_FILAMENT_METERS=700.0f
+
+[env:fw-EXT-750-D]
+extends = env:genericCH32V203C8T6
+build_flags =
+    ${env.build_flags}
+    -DENABLE_BOOT_PROBE
+    -DBAMBU_BUS_AMS_NUM=3
+    -DP1X_OUT_FILAMENT_METERS=750.0f
+
+[env:fw-EXT-800-D]
+extends = env:genericCH32V203C8T6
+build_flags =
+    ${env.build_flags}
+    -DENABLE_BOOT_PROBE
+    -DBAMBU_BUS_AMS_NUM=3
+    -DP1X_OUT_FILAMENT_METERS=800.0f
